sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:22: error: ')' expected but ';' found.
	 setValeur(j,valeur);
                            ^