sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {

	var ecart=getNombreValeurs()/2
while(ecart>0)
{

while(j >= gap && (getValue(j-gap) > value)) {
copy(j-gap,j);
j -= gap;
}

 	for (i <- ecart - 1 to getNombreValeurs()-1)
 	{ 
      var j=i;
      var valeur =getValeur(i)
      while (j>= gap && (getValeur(j-ecart)>valeur)
      { 
       copier(j-ecart,j)
        j=j-ecart
      }
	 setValeur(j,valeur);
    }
    ecart = ecart/2;
}
}